# wasm-regression

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
public/: index.html  index.js  simple.min.css  worker.js
public/pkg/: modelwasm.d.ts  modelwasm.js  modelwasm_bg.wasm.d.ts  package.json
sets/: diabetes-yesno.csv
src/: lib.rs
